--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
-    "react-router-dom": "^7.8.2",
-    "redux": "^5.0.1"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
