--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
