--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
+    "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.11.0",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
@@ -21,6 +22,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "redux-persist": "^6.0.0",
+    "tailwindcss": "^4.1.14",
     "yup": "^1.7.0"
   },
   "devDependencies": {
